--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NoteAS</string>
     <string name="add_note">Add note</string>
     <string name="save">Save</string>
-</resources>
+    <string name="saved">Saved</string>
+ </resources>
