--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="save_to_text">Save to text file</string>
     <string name="to_single_file">Save to single file</string>
     <string name="to_multiple_files">Save to multiple files</string>
+    <string name="settings">Settings</string>
 </resources>
