--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="to_single_file">Save to single file</string>
     <string name="to_multiple_files">Save to multiple files</string>
     <string name="settings">Settings</string>
+    <string name="delete">Delete</string>
 </resources>
