Fully functional AFAIK

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NoteAS</string>
+    <string name="app_name">Clear Note</string>
     <string name="add_note">Add note</string>
     <string name="save">Save</string>
     <string name="saved">Saved</string>
