--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="to_multiple_files">Save to multiple files</string>
     <string name="settings">Settings</string>
     <string name="delete">Delete</string>
+    <string name="date">Add Date when saving</string>
 </resources>
